# archiva

./: .gitignore  API-DOKUMENTATION.md  BEDIENUNGSANLEITUNG.md  CHAT-HANDOFF.md  README.md  TODO-VISION.md  archiva.md  config.example.yaml  docker-compose.yml  pyproject.toml
archiva/: FULLTEXT_ARCHITEKTUR.md  OCR_SETUP.md  __init__.py  api.py  api_documents.py  config.py  database.py  internal_index_api.py  layout.py  main.py  metadata_validation.py  migrate_cabinet_types.py  models.py  preview_queue.py  preview_worker.py  schema.py  search.py  search_api.py  search_legacy.py  storage.py  ui.py
archiva/indexer/: __init__.py  dispatcher.py  extractor.py  ocr.py  opensearch_client.py  status.py  worker.py
archiva/search/: __init__.py  legacy.py  mapping.py  query_builder.py  service.py
memory/: 2026-04-19.md  2026-04-23.md  archiva.md
